# Kitsune-Download-Manager

./: Cargo.toml  Makefile  PKGBUILD  README.md  install_native_host.sh  kitsune-dm.install  package.json  task_report.md  update_extension_id.sh
.github/: release-contract.json
.github/workflows/: ci.yml  release.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-13-debian-e2e.txt  task-13-debian-invalid-path.txt  task-15-windows-static-validation.md  task-15-windows-unsupported-mode.txt
.sisyphus/evidence/arch-e2e-wave/: README.md
.sisyphus/notepads/kitsune-gui/: issues.md  (+1 more)
.sisyphus/plans/: kitsune-cross-platform-installer.md  kitsune-gui.md  makefile-build-system.md  three-fixes.md  windows-build-streamlining.md
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  native_host_manifest.rs  native_messaging.rs
crates/cli/src/core/: downloader.rs  mod.rs  worker.rs
crates/core/: Cargo.toml
crates/core/src/: downloader.rs  lib.rs  session.rs  worker.rs
crates/core/src/utils/: fs.rs
crates/gui/: Cargo.toml  package-lock.json  package.json
crates/shim/: Cargo.toml
extension/: background.js  extension_id_source.txt  manifest.json  popup.html
extension/icons/: process_icons.py
scripts/: assert-release-publish-fan-in.mjs  build_windows.ps1  detect-release-prerelease.mjs  normalize-release-assets.mjs  release-smoke-verify.mjs  validate-release-config-version.mjs  verify_installer.sh  verify_installer_windows.ps1  verify_key_id.sh
scripts/linux/: native-host-status.sh  self-heal-native-host.sh
scripts/mocks/: release-smoke-gh-shim.mjs
(+24 files in other folders)
