[package]
name = "kitsune-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
kitsune-core = { path = "../core" }
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
env_logger = "0.11.9"
futures = "0.3.32"
indicatif = "0.18.4"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
