[package]
name = "kitsune-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
futures = "0.3.32"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["json", "stream", "native-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
